# old-dogs-old-tricks

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix
.github/workflows/: binder.yml
binder/: environment.yml  postBuild  start
notebooks/: analysis_and_plots.ipynb
scripts/: generate.py  mcmurchie_davidson.py  pade.py  reference.py
src/: CMakeLists.txt  HornerScheme.hpp  Utilities.hpp  run.cpp
src/mcmurchie_davidson/: CMakeLists.txt  McMurchieDavidson.cpp  McMurchieDavidson.hpp  Pretabulated.hpp
src/mcmurchie_davidson/tables/: BFunc_01.hpp  BFunc_02.hpp  BFunc_03.hpp  BFunc_04.hpp  BFunc_05.hpp  BFunc_06.hpp  BFunc_07.hpp  BFunc_08.hpp  BFunc_09.hpp  BFunc_10.hpp  BFunc_11.hpp  BFunc_12.hpp  BFunc_13.hpp  BFunc_14.hpp  BFunc_15.hpp  BFunc_16.hpp  BFunc_17.hpp  BFunc_18.hpp  BFunc_19.hpp  BFunc_20.hpp
src/pade/: Approximants.hpp  CMakeLists.txt  Pade.cpp  Pade.hpp
src/pade/approximants/: Coefficients_05_06.hpp  Coefficients_09_10.hpp  Coefficients_15_16.hpp  Coefficients_25_26.hpp
